[package]
name = "lily58"
version = "0.1.0"
authors = ["Ethan Olpin"]
description = "Lily58 Keyboard Firmware built on RMK"
homepage = "https://github.com/EthanOlpin/Lily58-Pro-RMK"
repository = "https://github.com/EthanOlpin/Lily58-Pro-RMK"
readme = "README.md"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-time = { version = "0.5" }
embassy-rp = { version = "0.8", features = [
    "rp2040",
    "time-driver",
    "critical-section-impl",
] }
embassy-executor = { version = "0.9", features = [
    "arch-cortex-m",
    "executor-thread",
] }
embassy-futures = { version = "0.1" }
cortex-m-rt = "0.7.5"
portable-atomic = { version = "1.11", features = ["critical-section"] }
panic-probe = { version = "1.0" }
static_cell = "2"
ssd1306 = { version = "0.10.0", features = ["async"] }
embassy-sync = "0.7.0"
rmk = { version = "0.8.1", features = [
    "split",
    "rp2040",
    "storage",
    "host",
], default-features = false}
log = "0.4.27"

# [features]
# avoid having to use --allow-multiple-definition linker flag
# on macOS with Apple Silicon at least
# default = ["rp-pico/disable-intrinsics"]

[build-dependencies]
xz2 = "0.1.7"
json = "0.12"
const-gen = "1.6"

# Split keyboard example
[[bin]]
name = "central"
path = "src/central.rs"
test = false
bench = false

[[bin]]
name = "peripheral"
path = "src/peripheral.rs"
test = false
bench = false

[profile.dev]
codegen-units = 1      # better optimizations
debug = true
opt-level = 1
overflow-checks = true
lto = false
panic = 'unwind'

[profile.release]
codegen-units = 1       # better optimizations
debug = true            # no overhead for bare-metal
opt-level = "z"         # optimize for binary size
overflow-checks = false
lto = "fat"

[features]
display = []
